Удалить FIND_POPULAR_QUERY, исправить getListOfPopularFilms